# Loggy

./: .gitignore  .gitmodules  NLOG_GS_PUB_A1202_27002001.tif  README.md  Report.ipynb  logging.conf  loggy.ipynb  pyproject.toml  setup.txt
source/: __main__.py  entities.py
