[tool.poetry]
name = "loggy"
version = "0.1.0"
description = "a machine learning assisted well log interpretation project"
authors = ["Mfon Nwa <mfonnwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
welly = "^0.5.2"
scikit-learn = "^1.2.2"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
dlisio = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
